# direct-crypto-socket

./: SSH.hs  Shell.hs  direct-crypto-sockets.cabal  direct-tls.cabal
Internal/: AbstractStreams.hs
Network/Protocol/: SSH.hs
Network/Protocol/SSH/: Authentication.hs  Channels.hs  Compression.hs  Encryption.hs  Global.hs  Internal.hs  KeyExchange.hs  KeyExchange.hs-boot  MAC.hs  ServerHostKey.hs  ServerHostKey.hs-boot  Types.hs
