name: direct-crypto-sockets
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://dankna.com/software/
bug-reports: http://dankna.com/issues/create/
category: Network
synopsis: A native implementation of the SSH-2, TLS/SSL, and related protocols.
description:
  Direct-Crypto-Sockets is a library which provides both client-side and
  server-side implementations of the SSH-2, TLS, and related protocols.

Library
  exposed-modules: Network.Protocol.SSH
  build-depends: base >= 4.1 && < 5,
                 network >= 2.3.0.1 && < 3,
                 Crypto >= 4.2.3 && < 5

Executable
  main-is: Test.hs
  other-modules: Network.Protocol.SSH