name: direct-crypto-sockets
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://dankna.com/software/
bug-reports: http://dankna.com/issues/create/
category: Network
synopsis: A native implementation of the SSH-2, TLS/SSL, and related protocols.
description:
  Direct-Crypto-Sockets is a library which provides both client-side and
  server-side implementations of the SSH-2, TLS, and related protocols.

Library
  exposed-modules: Network.Protocol.SSH,
                   Network.Protocol.SSH.Compression,
                   Network.Protocol.SSH.Encryption,
                   Network.Protocol.SSH.MAC,
                   Network.Protocol.SSH.KeyExchange,
                   Network.Protocol.SSH.ServerHostKey
  other-modules: Internal.AbstractStreams
  build-depends: base >= 4.1 && < 5,
                 network >= 2.3.0.1 && < 3,
                 Crypto >= 4.2.3 && < 5

Executable crypto
  main-is: Shell.hs
  other-modules: Internal.AbstractStreams,
                 Network.Protocol.SSH,
                 Network.Protocol.SSH.Compression,
                 Network.Protocol.SSH.Encryption,
                 Network.Protocol.SSH.MAC,
                 Network.Protocol.SSH.KeyExchange,
                 Network.Protocol.SSH.ServerHostKey
  build-depends: base >= 4.1 && < 5,
                 network >= 2.3.0.1 && < 3,
                 Crypto >= 4.2.3 && < 5,
                 haskeline >= 0.6.3.2 && < 1,
                 containers >= 0.4.0.0 && < 1,
                 transformers >= 0.2.2.0 && < 1,
                 bytestring >= 0.9.1.10 && < 1

Executable direct-ssh
  main-is: SSH.hs
  other-modules: Internal.AbstractStreams,
                 Network.Protocol.SSH,
                 Network.Protocol.SSH.Compression,
                 Network.Protocol.SSH.Encryption,
                 Network.Protocol.SSH.MAC,
                 Network.Protocol.SSH.KeyExchange,
                 Network.Protocol.SSH.ServerHostKey
  build-depends: base >= 4.1 && < 5,
                 network >= 2.3.0.1 && < 3,
                 Crypto >= 4.2.3 && < 5,
                 random >= 1.0.0.3 && < 2,
                 containers >= 0.4.0.0 && < 1,
                 bytestring >= 0.9.1.10 && < 1,
                 utf8-string >= 0.3.6 && < 1
